code/examples/stderr/borrowck_2.stderr
error[E0308]: mismatched types
 --> examples/borrowck_2.rs:2:5
  |
2 |     consume_fn(identity);
  |     ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
  |
  = note: expected reference `&_`
             found reference `&_`
note: the lifetime requirement is introduced here
 --> examples/borrowck_2.rs:9:42
  |
9 | fn consume_fn<T>(_: impl FnOnce(&u32) -> T) {}
  |                                          ^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `code` (example "borrowck_2") due to 1 previous error
